2004-11-26	Benedikt Meurer <benny@xfce.org>
	* exo/exo-string.h, exo/exo-string.c: Added exo_strndupv() utility
	  function to duplicate string arrays.
	* exo/exo-enum-types.h, exo/exo-pango-extensions.c,
	  exo/exo-enum-types.c, exo/exo-pango-extensions.h: Added 
	  EXO_PANGO_ELLIPSIZE_NONE to be compatible with Pango. Use
	  ellipsizing functions provided by Pango 1.6 if build against
	  Pango 1.6 or above.
	* exo/exo-xsession-client.h, exo/exo-xsession-client.c: Added
	  exo_xsession_client_get_restart_command() as per Brians request.
	* exo/exo-ellipsized-label.c, exo/exo-ellipsized-label.h: Made this
	  widget compatible with GtkLabel from Gtk+ 2.6.
	* exo/exo-cell-renderer-ellipsized-text.c,
	  exo/exo-cell-renderer-ellipsized-text.h: Added a CellRenderer widget
	  that enhances GtkCellRendererText with the ability to automatically
	  ellipsize text. This is compatible with GtkCellRendererText from
	  Gtk+ 2.6.
	* exo/Makefile.am, HACKING: Added "regenerate" targets to regenerate
	  the marshallers and enum types files.
	* exo/exo.h: Include new header files.
	* docs/: Updated API documentation.
	* configure.ac: Updated version to 0.2.0pre1.




(Old svn revision: 16537)

--- a/configure.ac
+++ b/configure.ac
@@ -11,7 +11,7 @@ m4_define([libexo_verinfo], [0:1:0])
 m4_define([libexo_version_major], [0])
 m4_define([libexo_version_minor], [2])
 m4_define([libexo_version_micro], [0])
-m4_define([libexo_version_tag], [svn])
+m4_define([libexo_version_tag], [pre1])
 m4_define([libexo_version], [libexo_version_major().libexo_version_minor().libexo_version_micro()libexo_version_tag()])
 
 dnl Initialize autoconf
