--- a/exo/Makefile.am
+++ b/exo/Makefile.am
@@ -8,14 +8,20 @@ INCLUDES = 								\
 
 lib_LTLIBRARIES = libexo-0.2.la
 
+libexo_headers =							\
+	exo-pango-extensions.h
+
 libexoincludedir = $(includedir)/exo-0.2/exo
 
 libexoinclude_HEADERS =							\
+	$(libexo_headers)						\
 	exo.h								\
 	exo-binding.h							\
+	exo-cell-renderer-ellipsized-text.h				\
 	exo-config.h							\
 	exo-dbus.h							\
 	exo-ellipsized-label.h						\
+	exo-enum-types.h						\
 	exo-file-watch.h						\
 	exo-gdk-pixbuf-extensions.h					\
 	exo-gtk-extensions.h						\
@@ -24,7 +30,6 @@ libexoinclude_HEADERS =							\
 	exo-icon-bar.h							\
 	exo-icon-view.h							\
 	exo-md5.h							\
-	exo-pango-extensions.h						\
 	exo-property-proxy.h						\
 	exo-string.h							\
 	exo-toolbars-editor.h						\
@@ -37,9 +42,11 @@ libexoinclude_HEADERS =							\
 libexo_0_2_la_SOURCES =							\
 	$(libexo_HEADERS)						\
 	exo-binding.c							\
+	exo-cell-renderer-ellipsized-text.c				\
 	exo-config.c							\
 	exo-dbus.c							\
 	exo-ellipsized-label.c						\
+	exo-enum-types.c						\
 	exo-file-watch.c						\
 	exo-gdk-pixbuf-extensions.c					\
 	exo-gtk-extensions.c						\
@@ -82,19 +89,33 @@ libexo_0_2_la_LIBADD =							\
 	@LIBX11_LIBS@							\
 	@LIBXFCEGUI4_LIBS@
 
-exo-marshal.h: $(srcdir)/exo-marshal.list
-	glib-genmarshal --prefix=_exo_marshal --header \
-		$(srcdir)/exo-marshal.list > exo-marshal.h
-
-exo-marshal.c: $(srcdir)/exo-marshal.list
-	glib-genmarshal --prefix=_exo_marshal --body \
-		$(srcdir)/exo-marshal.list > exo-marshal.c
-
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = exo-0.2.pc
 
+regenerate:
+	( cd $(srcdir) && glib-mkenums \
+		--fhead "#ifndef __EXO_ENUM_TYPES_H__\n#define __EXO_ENUM_TYPES_H__\n#include <libxfce4util/libxfce4util.h>\nG_BEGIN_DECLS\n" \
+		--fprod "/* enumerations from \"@filename@\" */\n" \
+		--vhead "GType @enum_name@_get_type (void);\n#define EXO_TYPE_@ENUMSHORT@ (@enum_name@_get_type())\n" \
+		--ftail "G_END_DECLS\n\n#endif /* !__EXO_ENUM_TYPES_H__ */" \
+		$(libexo_headers) ) > xgen \
+	&& (cmp -s xgen exo-enum-types.h || cp xgen exo-enum-types.h ) \
+	&& rm -f xgen
+	( cd $(srcdir) && glib-mkenums \
+		--fhead "#undef GTK_DISABLE_DEPRECATED\n#define GTK_ENABLE_BROKEN\n#include <exo/exo.h>\n" \
+		--fprod "\n/* enumerations from \"@filename@\" */" \
+		--vhead "GType\n@enum_name@_get_type (void)\n{\n\tstatic GType type = 0;\n\tif (type == 0) {\n\tstatic const G@Type@Value values[] = {"\
+		--vprod "\t{ @VALUENAME@, \"@VALUENAME@\", \"@valuenick@\" }," \
+		--vtail "\t{ 0, NULL, NULL }\n\t};\n\ttype = g_@type@_register_static (\"@EnumName@\", values);\n  }\n\treturn type;\n}\n" \
+		$(libexo_headers) ) > xgen \
+	&& (cmp -s xgen exo-enum-types.c || cp xgen exo-enum-types.c ) \
+	&& rm -f xgen
+	glib-genmarshal --prefix=_exo_marshal --header \
+		$(srcdir)/exo-marshal.list > exo-marshal.h
+	glib-genmarshal --prefix=_exo_marshal --body \
+		$(srcdir)/exo-marshal.list > exo-marshal.c
+	echo "Regenerated source files"
+
 EXTRA_DIST = 								\
-	exo-0.2.pc.in							\
-	exo-config.h.in							\
 	exo-marshal.list
 
