2004-12-13	Benedikt Meurer <benny@xfce.org>
	* configure.ac, Makefile.am, THANKS, po/en_GB.po, po/en_GB.gmo: Added
	  en_GB translations from Dwayne Bailey <dwayne@translate.org.za>.




(Old svn revision: 16552)

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,6 +18,7 @@ EXTRA_DIST =								\
 	INSTALL								\
 	NEWS								\
 	README								\
+	THANKS								\
 	TODO								\
 	exo.spec.in							\
 	exo.spec
