2005-02-15	Benedikt Meurer <benny@xfce.org>
	* configure.ac, po/libexo.pot, po/libexo-0.3.pot: Include the major
	  and minor version in the translation domain name to allow parallel
	  installations of libexo-0.2 and libexo-0.3.
	* configure.ac, exo/exo-dbus.c, exo/exo-dbus.h, exo/exo.h,
	  exo/Makefile.am, po/POTFILES.in: Remove dependency on D-BUS.
	* configure.ac, exo/exo-ice.h, exo/exo-ice.c, exo/Makefile.am,
	  po/POTFILES.in: Remove ICE module, which can be readded later
	  on, but for now, we'll stick to the lightweight session
	  management provided by ExoXSessionClient.
	* configure.ac, NEWS, exo/exo-0.2.pc.in, exo/exo-0.3.pc.in,
	  exo/Makefile.am: Bump version to 0.3.0svn.
	* Makefile.am: Remove stale reference to the m4 directory.
	* exo/exo.h, exo/exo-property-proxy.h, exo/exo-property-proxy.c,
	  exo/Makefile.am, po/POTFILES.in: Remove obsolete class
	  ExoPropertyProxy, which was replaced with ExoBinding already.
	* exo/exo-file-watch.h, exo/exo-file-watch.c, exo/exo.h,
	  exo/Makefile.am, po/POTFILES.in: Remove obsolete class ExoFileWatch.
	  Thunar will include a better implementation.
	* exo/exo-uri.c, exo/exo-uri.h, exo/exo.h, exo/Makefile.am,
	  po/POTFILES.in: Remove unused class ExoUri.
	* exo/Makefile.am: Added rules to properly auto-generate the built
	  files. These autogeneration rules are only available if
	  --enable-maintainer-mode is specified for configure (which is
	  usually the case for autogen runs, but not for enduser configure
	  runs).




(Old svn revision: 16559)

--- a/configure.ac
+++ b/configure.ac
@@ -7,10 +7,10 @@ dnl Written by Benedikt Meurer <benny@xfce.org>.
 dnl
 
 dnl Version information
-m4_define([libexo_verinfo], [0:1:0])
+m4_define([libexo_verinfo], [0:0:0])
 m4_define([libexo_version_major], [0])
-m4_define([libexo_version_minor], [2])
-m4_define([libexo_version_micro], [1])
+m4_define([libexo_version_minor], [3])
+m4_define([libexo_version_micro], [0])
 m4_define([libexo_version_tag], [svn])
 m4_define([libexo_version], [libexo_version_major().libexo_version_minor().libexo_version_micro()libexo_version_tag()])
 
@@ -26,7 +26,7 @@ AC_REVISION([$Id$])
 dnl Initialize automake
 AM_INIT_AUTOMAKE([AC_PACKAGE_TARNAME()], [AC_PACKAGE_VERSION()])
 AM_CONFIG_HEADER([config.h])
-AM_MAINTAINER_MODE
+AM_MAINTAINER_MODE()
 
 dnl libtool versioning
 LIBEXO_VERINFO=libexo_verinfo()
@@ -41,17 +41,17 @@ AC_SUBST([LIBEXO_VERSION_MINOR])
 AC_SUBST([LIBEXO_VERSION_MICRO])
 
 dnl check for UNIX variants
-AC_AIX
-AC_ISC_POSIX
-AC_MINIX
+AC_AIX()
+AC_ISC_POSIX()
+AC_MINIX()
 
 dnl check for basic programs
-AC_PROG_CC
-AC_PROG_INSTALL
-AC_PROG_LIBTOOL
+AC_PROG_CC()
+AC_PROG_INSTALL()
+AC_PROG_LIBTOOL()
 
 dnl check for standard header files
-AC_HEADER_STDC
+AC_HEADER_STDC()
 AC_CHECK_HEADERS([errno.h fcntl.h locale.h math.h md5.h string.h \
                   sys/resource.h sys/stat.h sys/time.h sys/types.h \
                   time.h])
@@ -61,31 +61,27 @@ AC_SEARCH_LIBS([MD5Init], [md c], \
                [AC_DEFINE([HAVE_MD5INIT], [1], [Define if MD5Init present])])
 
 dnl Check for i18n support
-BM_I18N([libexo], [de en_GB])
+XDT_I18N([de en_GB], [libexo-libexo_version_major().libexo_version_minor()])
 
 dnl Check for required packages
-BM_DEPEND([DBUS], [dbus-glib-1], [0.22])
-BM_DEPEND([GTK], [gtk+-2.0], [2.4.0])
-BM_DEPEND([LIBXFCEGUI4], [libxfcegui4-1.0], [4.2.0])
-
-dnl Check for session management libraries
-BM_LIBSM
+XDT_CHECK_PACKAGE([GTK], [gtk+-2.0], [2.4.0])
+XDT_CHECK_PACKAGE([LIBXFCEGUI4], [libxfcegui4-1.0], [4.2.0])
 
 dnl Check for X11 libraries
-BM_LIBX11_REQUIRE
+XDT_CHECK_LIBX11_REQUIRE
 
 dnl Check for gtk-doc
 GTK_DOC_CHECK([1.0])
 
 dnl Check for debugging support
-BM_DEBUG_SUPPORT
+BM_DEBUG_SUPPORT()
 
 AC_OUTPUT([
 Makefile
 exo.spec
 docs/version.xml
 docs/Makefile
-exo/exo-0.2.pc
+exo/exo-0.3.pc
 exo/exo-config.h
 exo/Makefile
 po/Makefile.in
