--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -6,7 +6,7 @@ AUTOMAKE_OPTIONS = 1.6
 DOC_MODULE=exo
 
 # The top-level SGML file.
-DOC_MAIN_SGML_FILE=exo-docs.sgml
+DOC_MAIN_SGML_FILE=$(DOC_MODULE)-docs.sgml
 
 # Extra options to supply to gtkdoc-scan
 SCAN_OPTIONS=--deprecated-guards="EXO_DISABLE_DEPRECATED"
@@ -40,16 +40,14 @@ content_files = 					\
 # CFLAGS and LDFLAGS for compiling scan program. Only needed
 # if $(DOC_MODULE).types is non-empty.
 INCLUDES =	 					\
-	-DDBUS_API_SUBJECT_TO_CHANGE			\
 	-DEXO_API_SUBJECT_TO_CHANGE			\
 	-I$(top_srcdir) 				\
 	-I$(top_builddir) 				\
-	$(DBUS_CFLAGS)					\
 	$(GTK_CFLAGS)					\
 	$(LIBXFCEGUI4_CFLAGS)
 
 GTKDOC_LIBS =  						\
-	$(top_builddir)/exo/libexo-0.2.la
+	$(top_builddir)/exo/libexo-$(LIBEXO_VERSION_MAJOR).$(LIBEXO_VERSION_MINOR).la
 
 include $(top_srcdir)/gtk-doc.make
 
@@ -57,4 +55,4 @@ include $(top_srcdir)/gtk-doc.make
 EXTRA_DIST += 						\
 	version.xml.in
 
-
+# vi:set ts=8 sw=8 noet ai nocindent:
