2005-02-17	Benedikt Meurer <benny@xfce.org>
	* python/exomodule.c, python/Makefile.am, python/exo.override, TODO,
	  python/exo.defs, configure.ac, acinclude.m4, Makefile.am: Initial
	  work on the Python bindings, currently includes ExoIconBar and
	  ExoXsessionClient.




(Old svn revision: 16564)

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,12 @@
+if HAVE_PYTHON
+PYTHON_SUBDIR=python
+endif
+
 SUBDIRS =								\
 	exo								\
 	docs								\
-	po
+	po								\
+	$(PYTHON_SUBDIR)
 
 distclean-local:
 	rm -rf *.spec *.cache *~
