2005-02-18	Benedikt Meurer <benny@xfce.org>
	* po/libexo-0.3.pot, po/de.po, po/en_GB.po: Update the translation
	  files with the recent changes to the source files.
	* po/ChangeLog: Add an empty file here, as its required by the
	  po/Makefile.in.in file generated by gettextize.
	* configure.ac: Add the Makefile for the Python examples. Add
	  a Makefile variable LIBEXO_VERSION_API, that contains the
	  API version of libexo.
	* python/examples/Makefile.am, python/examples/ellipsizing.py,
	  python/examples/README: Ship simple python examples, currently
	  only one sample program to demonstrate the use of the ellipsizing
	  objects in libexo.
	* python/__init__.py, python/pyexo.py, python/Makefile.am: Use a
	  similar technique like pygtk to support installing multiple
	  versions of the pyexo bindings in parallel.
	* python/exomodule.c, python/exo.override, python/exo.defs,
	  python/Makefile.am: Include the ExoEllipsizedLabel and
	  ExoCellRendererEllipsizedText classes with the Python bindings.
	* NEWS: Add note about the new Python bindings.




(Old svn revision: 16565)

--- a/configure.ac
+++ b/configure.ac
@@ -36,9 +36,11 @@ dnl Subst libexo version
 LIBEXO_VERSION_MAJOR=libexo_version_major()
 LIBEXO_VERSION_MINOR=libexo_version_minor()
 LIBEXO_VERSION_MICRO=libexo_version_micro()
+LIBEXO_VERSION_API=$LIBEXO_VERSION_MAJOR.$LIBEXO_VERSION_MINOR
 AC_SUBST([LIBEXO_VERSION_MAJOR])
 AC_SUBST([LIBEXO_VERSION_MINOR])
 AC_SUBST([LIBEXO_VERSION_MICRO])
+AC_SUBST([LIBEXO_VERSION_API])
 
 dnl check for UNIX variants
 AC_AIX()
@@ -141,4 +143,5 @@ exo/exo-0.3.pc
 exo/exo-config.h
 po/Makefile.in
 python/Makefile
+python/examples/Makefile
 ])
