2005-02-24	Benedikt Meurer <benny@xfce.org>
	* python/exo.override, python/exo.defs: Add Python bindings for
	  the editable toolbars framework.
	* python/examples/Makefile.am, python/examples/toolbars.ui,
	  python/examples/toolbars.py: Add example how to use the editable
	  toolbars framework.




(Old svn revision: 16568)

--- a/python/examples/Makefile.am
+++ b/python/examples/Makefile.am
@@ -1,6 +1,8 @@
 noinst_DATA =								\
 	README								\
-	ellipsizing.py
+	ellipsizing.py							\
+	toolbars.py							\
+	toolbars.ui
 
 EXTRA_DIST =								\
 	$(noinst_DATA)
